--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,5 @@
 body {
   background-color: #21d4fd;
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+  font-family: 'Caveat', cursive;
 }
